Fixed on RTL + removed whitespace

--- a/administrator/templates/isis/css/template-rtl.css
+++ b/administrator/templates/isis/css/template-rtl.css
@@ -7533,11 +7533,23 @@ html[dir=rtl] .quick-icons .nav-list [class*=" icon-"] {
 #status {
 	background: #ebebeb;
 	border-top: 1px solid #d4d4d4;
-	padding: 2px 10px 4px 10px;
+	padding: 4px 10px;
 	-webkit-box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.8) inset, 0px -15px 15px rgba(255, 255, 255, 0.6);
 	-moz-box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.8) inset, 0px -15px 15px rgba(255, 255, 255, 0.6);
 	box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.8) inset, 0px -15px 15px rgba(255, 255, 255, 0.6);
 	color: #626262;
+}
+#status .btn-group {
+	margin: 0;
+}
+#status .btn-group.separator:after {
+	content: ' ';
+	display: block;
+	float: left;
+	background: #ADADAD;
+	margin: 0 10px;
+	height: 15px;
+	width: 1px;
 }
 #status .btn-toolbar,
 #status p {
@@ -7549,6 +7561,9 @@ html[dir=rtl] .quick-icons .nav-list [class*=" icon-"] {
 }
 #status a {
 	color: #626262;
+}
+#status .badge {
+	margin-right: .25em;
 }
 #status.status-top {
 	background: #1a3867;
@@ -8982,8 +8997,24 @@ input[type="url"] {
 		margin-left: 10px;
 	}
 }
+#status {
+	padding: 4px 10px;
+}
+#status .btn-group {
+	margin: 0;
+}
+#status .btn-group.separator:after {
+	content: ' ';
+	display: block;
+	float: left;
+	background: #ADADAD;
+	margin: 0 10px;
+	height: 15px;
+	width: 1px;
+}
 #status .badge {
-	margin-left: 0;
+	margin-left: .25em;
+	margin-right: 0;
 }
 .dropdown-menu > li > a {
 	text-align: right;
