--- a/administrator/templates/isis/less/template.less
+++ b/administrator/templates/isis/less/template.less
@@ -557,7 +557,7 @@ html[dir=rtl] .quick-icons .nav-list [class^="icon-"], html[dir=rtl] .quick-icon
 	color: #626262;
 
 	.btn-group {
-		margin-top: 0;
+		margin: 0;
 	}
 	.btn-group.separator:after {
 		content: ' ';
@@ -576,6 +576,9 @@ html[dir=rtl] .quick-icons .nav-list [class^="icon-"], html[dir=rtl] .quick-icon
 	}
 	a {
 		color: #626262;
+	}
+	.badge {
+		margin-right: .25em;
 	}
 }
 /* Status Module in top position */
